objects/copado__User_Story_Task__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Story_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_Hours__c</fullName>
        <formula>IF(
    CONTAINS( Estimated_Time__c , &quot;d&quot;) &amp;&amp; CONTAINS( Estimated_Time__c , &quot;h&quot;),
    (VALUE(MID( SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;), 0, FIND(&quot;d&quot;, SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;))-1)) * 8 ) +
    (VALUE(MID( SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;), FIND(&quot;d&quot;, SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;))+1, (LEN(SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;)) - (FIND(&quot;d&quot;, SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;)) + 1) ) ))) ,
    IF(
        CONTAINS( Estimated_Time__c , &quot;h&quot;),
        (VALUE(MID( SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;), 0, FIND(&quot;h&quot;, SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;))-1)) ),
        IF(
            CONTAINS( Estimated_Time__c , &quot;d&quot;),
            (VALUE(MID( SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;), 0, FIND(&quot;d&quot;, SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;))-1)) * 8),
            0
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Time (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Time__c</fullName>
        <inlineHelpText>Please use the format: &quot;X y&quot; where &quot;X&quot; is the amount of time (number) and &quot;y&quot; is the unit defined in &quot;d&quot; (day) or &quot;h&quot; (hour). For example &quot;1h&quot;, &quot;3d&quot; or &quot;1d 3h&quot;. If the amount of hours is equals or higher than 8, the value will be automatically translated into days and hours. For example: &quot;10h&quot; will be translated into &quot;1d2h&quot;.</inlineHelpText>
        <label>Estimated Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Remaining_Hours__c</fullName>
        <formula>IF(
    ISBLANK( Estimated_Time__c ),
    0,
    Estimated_Time_Hours__c -  Time_Spent_hours__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_hours__c</fullName>
        <label>Time Spent (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                    <default>true</default>
                    <label>Development</label>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Hours_Remaining__c</fullName>
        <label>Hours Remaining</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Progress Blocked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                    <isActive>false</isActive>
                    <label>Deferred</label>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                    <isActive>false</isActive>
                    <label>Waiting on someone else</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Tasks</relationshipLabel>
        <relationshipName>User_Story_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Story Task</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Subject__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__User_Story__c</columns>
        <columns>copado__Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UST-{0000000}</displayFormat>
        <label>User Story Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Estimated_Time_Correct_Format</fullName>
        <active>true</active>
        <errorConditionFormula>!REGEX( Estimated_Time__c , &quot;([1-9][0-9]*\\s*[d]\\s*)?([1-9][0-9]*\\s*[h])?&quot;)</errorConditionFormula>
        <errorDisplayField>Estimated_Time__c</errorDisplayField>
        <errorMessage>The provided format is incorrect. Please use the format: “X y” where “X” is the amount of time (number) and “y” is the unit defined in “d” (day) or “h” (hour). For example “1h”, “3d” or “1d 3h”.</errorMessage>
    </validationRules>
</CustomObject>